<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/ll_create_pocket"
  style="@style/CreatePocketBackground"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:focusableInTouchMode="true"
  android:orientation="vertical"
  android:paddingTop="@dimen/activity_vertical_margin">

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/et_destination"
      style="@style/CellphoneEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/prompt_destination_cellphone"
      android:imeOptions="actionNext"
      android:inputType="phone"
      android:maxLines="1"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/et_value"
      style="@style/ValueEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/prompt_value"
      android:imeOptions="actionNext"
      android:inputType="numberDecimal"
      android:maxLines="1"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/et_description"
      style="@style/DescriptionEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="top|left"
      android:hint="@string/prompt_description"
      android:imeOptions="actionDone"
      android:inputType="textMultiLine"
      android:lines="3"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.v7.widget.AppCompatButton
    android:id="@+id/btn_add"
    style="@style/CreatePocketFinalAction"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/pocket_card_info_margin_top"
    android:text="@string/action_add"/>

</LinearLayout>